[project]
name = "xai-telegram"
version = "0.1.0"
description = "Xircuits Component Library to interface with Telegram"
authors = [{ name = "Muhammad Fahreza Alghifari", email = "fahreza@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-telegram"
keywords = ["xircuits", "telegram"]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "examples/TelegramEchoBot.xircuits"
requirements_path = "requirements.txt"
